# Urban_Lights_Positioning_System

./: README.md  etudeTraj.m
ProjectionTesting/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
estimPosePointsOmni/: CMakeCache.txt  CMakeLists.txt  CModel.cpp  CModel.h  COmni.cpp  COmni.h  CPoint.cpp  CPoint.h  CPose.cpp  CPose.h  CPoseOmni.cpp  CPoseOmni.h  Makefile  PointTracking.cpp  PointTracking.h  cmake_install.cmake  data.txt  data2.txt  main  main.cpp
estimPosePointsOmni/LightTracking/acquisitions2/: K.txt
estimPosePointsOmni/LightTracking/camera/: K.txt
